# kidobo_rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml  udeps-audit.yml
benches/: core_perf.rs  ipset_perf.rs
release-notes/: dates.tsv  unreleased.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.10.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
scripts/: README.md  bump-version.sh  check-critical-coverage.sh  dev.sh  install.sh  post-coding-gates.sh  pre-commit-fast.sh  pre-push-tests.sh  unused-deps.sh
scripts/changelog/: format-release-notes.sh  generate.sh
scripts/perf/: check-regressions.sh  measure-lookup-constrained.sh  measure-lookup-rss.sh  run-benchmarks.sh
src/: error.rs  lib.rs  logging.rs  main.rs
src/adapters/: asn.rs  blocklist_analysis_sources.rs  blocklist_file.rs  cached_fetch.rs  cached_sources.rs  command_common.rs  command_runner.rs  config.rs  config_edit.rs  github_meta.rs  hash.rs  http_cache.rs  http_fetch.rs  ipset.rs  iptables.rs  limited_io.rs  lock.rs  lookup_sources.rs  mod.rs  path.rs  source_files.rs  source_load.rs
src/app/: sync.rs
src/cli/: args.rs  blocklist.rs  commands.rs  doctor.rs  flush.rs  init.rs  interrupt.rs  mod.rs  sync.rs
src/cli/blocklist/: asn.rs  confirm.rs  mod.rs  plan.rs  storage.rs  targets.rs  tests.rs
src/cli/doctor/: checks.rs  mod.rs  probes.rs  report.rs  tests.rs
src/cli/init/: mod.rs  provision.rs  systemd.rs  templates.rs  tests.rs
src/core/: blocklist.rs  blocklist_analysis.rs  config.rs  lookup.rs  mod.rs  network.rs  sync.rs
tests/: cli_runtime.rs
