[package]
name = "kidobo_rs"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "One-shot Linux firewall blocklist manager with atomic ipset updates"
readme = "README.md"
repository = "https://github.com/blwarren/kidobo"
homepage = "https://github.com/blwarren/kidobo"
documentation = "https://docs.rs/kidobo_rs"
keywords = ["firewall", "ipset", "iptables", "blocklist", "cli"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.93.1"

[[bin]]
name = "kidobo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
fs2 = "0.4"
log = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "1"

[dev-dependencies]
tempfile = "3"
